[package]
name = "ddns"
version = "0.1.0"
authors = ["rica"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
# tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rand = "0.8"
hmac-sha1 = "^0.1"
base64 = "0.13"
url = "2.2"
